extract github config from code to properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+server.port=8080
+
+github.client.id=dabaa142e0257f2e2510
+github.client.secret=c3131cc00f852f9c36bb25950165148a78b69ec6
+github.redirect.uri=http://localhost:8080/callback
 
