--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ github.client.id=dabaa142e0257f2e2510
 github.client.secret=c3131cc00f852f9c36bb25950165148a78b69ec6
 github.redirect.uri=http://localhost:8080/callback
 
+spring.datasource.url=jdbc:h2:~/community
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.datasource.driver-class-name=org.h2.Driver
+
